Preserve canonical normalization without breaking dynamic enumeration
Constraint: Task 11 is limited to the Enumerator seam and null-bearing fixture contract.\nRejected: Test weakening or unconditional normalization | either violates the authoritative scanner or changes dynamic enumeration.\nConfidence: high\nScope-risk: narrow\nDirective: Keep the first post-loop statement as capture-gated normalization and retain null-safe immutable FType copies.\nTested: Integrated-peer test-compile PASS; CampaignBG014NeutralSemanticBoundaryRedTest 5/5 PASS; exact present-null/reordered candidate negative PASS.\nNot-tested: Full five-class suite remains blocked outside this scope by REWIRE_CLONE_MAPPING_DIFFERS and localhost:1234 refusal.